// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSplitPanel accepts panel props 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--primary ouiPanel--noShadow ouiPanel--noBorder ouiPanel--flexGrowZero ouiSplitPanel"
>
  <div
    aria-label="aria-label"
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--success ouiPanel--noShadow ouiPanel--noBorder ouiSplitPanel__inner testClass1 testClass2"
    data-test-subj="test subject string"
  />
</div>
`;

exports[`OuiSplitPanel inner children are rendered 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--flexGrowZero ouiSplitPanel"
>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiSplitPanel__inner"
  />
</div>
`;

exports[`OuiSplitPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--flexGrowZero ouiSplitPanel testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiSplitPanel renders as row 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--flexGrowZero ouiSplitPanel ouiSplitPanel--row"
/>
`;

exports[`OuiSplitPanel responsive can be changed to different breakpoints 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--flexGrowZero ouiSplitPanel"
/>
`;

exports[`OuiSplitPanel responsive can be false 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--flexGrowZero ouiSplitPanel"
/>
`;

exports[`OuiSplitPanel responsive is rendered at small screens 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--flexGrowZero ouiSplitPanel"
/>
`;
